sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:17: error: not found: value i
isSmaller(i,i+ecart) 
          ^AlgGnomeSort:17: error: not found: value i
isSmaller(i,i+ecart) 
            ^AlgGnomeSort:17: error: not found: value ecart
isSmaller(i,i+ecart) 
              ^